# location-lookup-api

./: .gitignore  Makefile  Pipfile  README.md  docker-compose-prod.yml  docker-compose.yml  requirements.txt  wsgi.py
.github/workflows/: main.yml  pr.yml
api/: __init__.py  config.py  models.py  routes.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: DataSelection.js  NavBar.js  ResultList.js  Search.js  Table.js
kubernetes/: api-deployment.yml  api-service.yml  minikube-ingress.yml
notebooks/: create_combined_lookup.ipynb  lsoa_ccg_stp.ipynb  make_data.py
server/: Dockerfile  make_data.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
server/app/: __init__.py  config.py  logger.py
server/app/api/: __init__.py  ping.py
server/app/api/location/: crud.py  models.py  views.py
server/app/api/lsoa/: crud.py  lsoa_utils.py  models.py  views.py
server/app/api/practice_lsoa_imd/: crud.py  models.py  views.py
server/app/api/trust_geodata/: crud.py  models.py  views.py
server/app/db/: create.sql
server/app/tests/: conftest.py
server/data/: all_hospital_locations.txt  ccg_2020.csv  combined_lookup.csv  practice_to_lsoa_to_imd.txt  stp_region_2020.csv
terraform/: backend.tf  llapi.out  main.tf  variables.tf
terraform/vars/: prod.tfvars
