[tool.poetry]
name = "lookup"
version = "0.1.0"
description = ""
authors = ["Leo Edwards <leo.edwards@carnallfarrar.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
