[tool.poetry]
name = "lookup"
version = "0.1.0"
description = ""
authors = ["Leo Edwards <leo.edwards@carnallfarrar.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
Flask = "^2.1.1"
Flask-Admin = "^1.6.0"
Flask-Cors = "^3.0.10"
flask-restx = "^0.5.1"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
python-json-logger = "^2.0.2"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
